--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,18 +1,13 @@
 {
   "compilerOptions": {
-    "lib": [
-      "ES2015",
-      "ES2016",
-      "ES2017",
-      "ES2018",
-      "ES2019",
-      "ES2020"
-    ],
-    "target": "ES2019",
-    "allowJs": true,
-    "allowSyntheticDefaultImports": true,
+    "outDir": "./dist/",
     "esModuleInterop": true,
+    "module": "UMD",
+    "target": "es2017",
     "moduleResolution": "node",
-    "resolveJsonModule": true
-  }
+    "rootDir": "src"
+  },
+  "include": [
+    "src"
+  ]
 }
