--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "dependencies": {
     "@types/node": "^13.13.5",
+    "@types/webpack": "^4.41.12",
     "arweave": "^1.7.0",
     "ts-node": "^8.10.1",
     "typescript": "^3.8.3",
