--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@types/node": "^13.13.5",
     "@types/webpack": "^4.41.12",
     "arweave": "^1.7.0",
+    "mime": "^2.4.5",
     "ts-node": "^8.10.1",
     "typescript": "^3.8.3",
     "webpack": "^4.43.0"
