--- a/package.json
+++ b/package.json
@@ -9,12 +9,16 @@
     "arweave": "^1.7.0",
     "mime": "^2.4.5",
     "ts-node": "^8.10.1",
-    "typescript": "^3.8.3",
     "webpack": "^4.43.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "@types/jest": "^25.2.2",
+    "jest": "^26.0.1",
+    "ts-jest": "^26.0.0",
+    "typescript": "^3.9.2"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "author": "",
   "license": "ISC"
