--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,8 @@
     "module": "UMD",
     "target": "es2017",
     "moduleResolution": "node",
-    "rootDir": "src"
+    "rootDir": "src",
+    "declaration": true
   },
   "include": [
     "src"
