--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,14 @@
 {
   "compilerOptions": {
-    "outDir": "./dist/",
-    "esModuleInterop": true,
-    "module": "UMD",
     "target": "es2017",
+    "module": "commonjs",
     "moduleResolution": "node",
-    "rootDir": "src",
-    "declaration": true
+    "esModuleInterop": true,
+    "sourceMap": true,
+    "strict": true,
+    "outDir": "./dist/"
   },
   "include": [
     "src"
-  ]
+  ],
 }
