--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,8 @@
     "esModuleInterop": true,
     "sourceMap": true,
     "strict": true,
-    "outDir": "./dist/"
+    "outDir": "./dist/",
+    "declaration": true
   },
   "include": [
     "src"
